# SAFER

./: .gitmodules  LICENSE  README.md  TODO.md
.devcontainer/: Dockerfile  README_DOCKER.md  devcontainer.json  postcreate.sh
control/: anafi_control_node.py  anafi_local_odom_node.py
control_lib/: cbf_single_integrator.py
datasets/fire_smoke/: data.yaml
datasets/fire_smoke/_import/train/: labels.cache
datasets/fire_smoke/_import/valid/: labels.cache
runs/detect/train/: args.yaml  results.csv
src/control/: package.xml  setup.py
src/control/control/: anafi_control_node.py  anafi_local_odom_node.py  cbf_node.py  cbf_si.py  cbf_single_integrator.py  ergodic_cbf_demo_node.py  ergodic_inspection_node.py  forward_ergodic_demo_node.py  gazebo_pose_to_odom.py
src/control/launch/: anafi.launch.py  sim.launch.py  simulation.launch.py
src/control/simulator/config/: bridges.yaml
src/control/simulator/models/: model.config  model.sdf
src/control/simulator/worlds/: surveillance_building.fwx  surveillance_building.world  surveillance_building_forward_ergodic.world
src/vision/: package.xml  setup.py
src/vision/vision/: person_fire_detector.py  person_fire_update.py
vision/: fire_detector.py  object_detector.py  person_fire_detector.py
